# nanochat-rs-ternary

./: .gitignore  ACTIONABLE_NEXT_STEPS.md  CHANGELOG.md  CLAUDE.md  CUTTING_EDGE_IMPLEMENTATION_PLAN.md  E2_INTEGRATION_COMPLETE.md  FINAL_SUMMARY_AND_ACTIONS.md  IMPLEMENTATION_GUIDE.md  LATEST_CHANGES_REVIEW.md  LICENSE  PROJECT_REVIEW_AND_RECOMMENDATIONS.md  PROJECT_SUMMARY.md  README.md  TEST_RESULTS.md  WAVEFIELD_CAUSALITY_ANALYSIS.md  compiler_verified_training.rs  config_a_threadripper_blackwell.toml  fp4_training_implementation.rs  galore2_implementation.rs  looplm_implementation.rs  mhc_lite.rs  monitor_training.sh  mtp_collider_implementation.rs  nanochat_review.md  nanochat_summary.md  rustfmt.toml  test_e2_optimizer.sh  train_125m_epyc.sh  train_1b_epyc.sh  train_3b_epyc.sh  train_3b_epyc_simple.sh  train_config_a.sh  train_config_b.sh  train_config_c.sh  training.pid  wavefield_analysis.py
nanochat-rs-ternary/: .gitignore  BENCHMARK_README.md  BENCHMARK_TOOL.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CODEGEN_EVAL.md  COPYING_BUG_INVESTIGATION.md  COPYING_BUG_SOLUTION.md  Cargo.toml  DATA_SUMMARY.md  E4_IMPLEMENTATION_STATUS.md  EVALUATION_DEMO_REPORT.md  EXPORT_SUMMARY.md  FINAL_STATUS.md  INFERENCE_DEMO.md  ISSUES_STATUS.md  LOOPLM_MVP.md  LOOPLM_PROGRESS.md  MAXRL_INTEGRATION.md  MEMORY_OPTIMIZATION_STATUS.md  MTP_VALIDATION.md  PRODUCTION_READY.md  PRODUCTION_TRAINING.md  README.md  REPORT.md  RL_TRAINING_RESULTS.md  SESSION_SUMMARY.md  SHOWCASE.md  START_TRAINING.md  STATUS.md  TRAINING.md  TRAINING_COMPLETE.md  TRAINING_DATA_GUIDE.md  TRAINING_PLAN.md  TRAINING_REPORT.md  TRAINING_STATUS.md  WORK_COMPLETE.md  benchmark_test.json  rustfmt.toml  test_entropy.rs  (+3 more)
nanochat-rs-ternary/.github/: dependabot.yml
nanochat-rs-ternary/.github/workflows/: ci.yml
nanochat-rs-ternary/benches/: gemv_bench.rs  mhc_overhead.rs
nanochat-rs-ternary/benchmark_results_20260215_064417/: REPORT.md
nanochat-rs-ternary/benchmark_results_8bit_20260215_101652/: REPORT.md
nanochat-rs-ternary/benchmark_results_quick_20260215_064605/: REPORT.md
nanochat-rs-ternary/benchmark_results_quick_20260215_072530/: REPORT.md
nanochat-rs-ternary/benchmark_results_quick_20260215_073444/: REPORT.md
nanochat-rs-ternary/benchmark_results_quick_20260215_074544/: REPORT.md
nanochat-rs-ternary/bindings/python/: Cargo.toml  README.md  pyproject.toml
nanochat-rs-ternary/configs/: nano_125m_8bit.toml  nano_125m_8bit_galore.toml  nano_125m_galore.toml  production_e3_full.toml  test_8bit.toml  test_async_loader.toml  test_collider.toml  test_galore_muon.toml  test_mtp.toml
nanochat-rs-ternary/configs/e3/: README.md  baseline.toml  full.toml  galore2.toml  mtp_only.toml  muon_8bit.toml
nanochat-rs-ternary/configs/models/: medium_3b.toml  nano_125m.toml  small_560m.toml
nanochat-rs-ternary/crates/mhc-lite/: .clippy.toml  Cargo.toml
nanochat-rs-ternary/crates/nanochat-cli/: Cargo.toml
nanochat-rs-ternary/crates/nanochat-core/: Cargo.toml
nanochat-rs-ternary/crates/nanochat-eval/: Cargo.toml
nanochat-rs-ternary/crates/nanochat-model/: Cargo.toml
nanochat-rs-ternary/crates/nanochat-rl/: Cargo.toml  README.md
nanochat-rs-ternary/crates/nanochat-serve/: Cargo.toml
nanochat-rs-ternary/crates/nanochat-train/: Cargo.toml  build.rs
nanochat-rs-ternary/crates/ternary-core/: Cargo.toml  build.rs
nanochat-rs-ternary/data/: .gitignore  dataset_v3_stats.json  tokenize_rust.py
nanochat-rs-ternary/docs/: ASYNC_LOADER_INTEGRATION.md  COLLIDER_INTEGRATION.md  E3_IMPLEMENTATION_STATUS.md  FIRE_GUIDE.md  MHC_ANALYSIS_GUIDE.md  MTP_INTEGRATION.md  README.md  TRAINING_FREE_GRPO_GUIDE.md  architecture.md  huggingface_model_card_template.md
nanochat-rs-ternary/docs/api/: README.md
nanochat-rs-ternary/eval_results/: engram-v12_samples.txt  engram-v13_samples.txt  engram-v14_samples.txt  nano-275m-engram-only_samples.txt  nano-275m-haar-v3_samples.txt  nano-275m-loop-only_samples.txt
nanochat-rs-ternary/examples/: PARALLEL_TRAINING.md  README.md  benchmark_inference.rs  benchmark_memory.rs  debug_generation.rs  distill_qwen3.rs  evaluate_codegen.rs  inspect_data.rs  inspect_mhc_params.rs  sensitivity_analysis.rs  test_context_dependence.rs  test_cuda_minimal.rs  test_data_shift.rs  test_generation.rs  test_generation_simple.rs  test_layer_outputs.rs  test_loss_alignment.rs  test_model_cuda.rs  test_rust_small.rs  test_trainer_cuda.rs  train_advanced.rs  train_diagnostic.rs  train_nano_125m.rs  train_nano_simple.rs  train_qwen3_distill.sh  train_rust_fixed.rs  train_rust_maxgpu.rs  train_shakespeare.rs  train_stack_maxgpu.rs
nanochat-rs-ternary/fuzz/: Cargo.toml  README.md
nanochat-rs-ternary/models/: nanochat-tiny.mhc
nanochat-rs-ternary/nanochat/: __init__.py  model_zoo.py
nanochat-rs-ternary/scripts/: README.md  benchmark_8bit_optimizer.sh  benchmark_e3.sh  benchmark_e3_quick.sh  benchmark_optimizers.sh  chain_loop_then_haar.sh  check_6hour_status.sh  check_training_status.sh  download_more_data.sh  download_rust_repos.sh  e2e_full_pipeline.sh  e2e_smoke_ci.sh  eval_benchmark.sh  eval_checkpoint.sh  eval_coherence.sh  eval_morning.sh  extract_and_tokenize.py  launch_7b.sh  monitor.sh  monitor_production.sh  monitor_training.sh  prepare_big_dataset.py  publish_hf.sh  run_extended_benchmarks.sh  score_coherence.py  train_275m_baseline.sh  train_275m_engram_loop.sh  train_275m_engram_only.sh  train_275m_haar_v3.sh  train_275m_loop_only.sh  train_275m_wave.sh  train_6hour.sh  train_6hour_v2.sh  train_baseline.sh  train_haar_chunked.sh  train_haar_v2.sh  train_large_7b.sh  train_maxrl.sh  train_medium_3b.sh  train_nano125m_4090.sh  (+9 more)
nanochat-rs-ternary/src/: lib.rs
nanochat-rs-ternary/tests/: cross_validate.rs  e2e_generate.rs  export_roundtrip.rs  export_roundtrip.rs.bak  loop_roundtrip.rs  mhc_property_tests.rs  mhc_train_inference_parity.rs  roundtrip_test.rs  triangle_of_truth.rs  wavefield_integration.rs
nanochat-rs-ternary/training/: evaluate.py  export.py  gen_reference.py  mhc_lite.py  model.py  optimizers.py  ref.mhc  requirements.txt  ternary_qat.py  test_optimizers.py  train.py
(+159 files in other folders)
