[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.8"
half = "2.3"
criterion = { version = "0.5", features = ["html_reports"] }

# Root package for integration tests and benchmarks
[package]
name = "nanochat-rs-ternary"
version = "0.1.0"
edition = "2021"

[dependencies]
ternary-core = { path = "crates/ternary-core" }
ternary-kernels = { path = "crates/ternary-kernels" }
mhc-lite = { path = "crates/mhc-lite" }
nanochat-model = { path = "crates/nanochat-model" }
nanochat-serve = { path = "crates/nanochat-serve" }
safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
half = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
nanochat-train = { path = "crates/nanochat-train" }
tempfile = "3"
candle-core = "0.9"
candle-nn = "0.9"

[[bench]]
name = "gemv_bench"
harness = false

[[bench]]
name = "mhc_overhead"
harness = false
