[workspace]
resolver = "2"
members = ["crates/*", "bindings/python"]

[workspace.dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.8"
half = "2.3"
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = "1.16"
serde_json = "1.0"
candle-core = "0.9"
candle-nn = "0.9"
# P1 improvements
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
toml = "0.8"
# P2 improvements
proptest = "1.5"
colored = "2.1"
rustfft = "6.2"
num-complex = "0.4"
rustyline = "14.0"
pyo3 = { version = "0.22", features = ["extension-module"] }

# Root package for integration tests and benchmarks
[package]
name = "nanochat-rs-ternary"
version = "0.1.0"
edition = "2021"
autoexamples = false  # Explicitly list working examples only

[dependencies]
ternary-core = { path = "crates/ternary-core" }
ternary-kernels = { path = "crates/ternary-kernels" }
mhc-lite = { path = "crates/mhc-lite" }
nanochat-model = { path = "crates/nanochat-model" }
nanochat-serve = { path = "crates/nanochat-serve" }
nanochat-eval = { path = "crates/nanochat-eval" }
nanochat-train = { path = "crates/nanochat-train" }
wave-fft = { path = "crates/wave-fft" }
safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
half = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tokenizers = "0.20"
rand = "0.8"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
candle-core = "0.9"
candle-nn = "0.9"

[[bench]]
name = "gemv_bench"
harness = false

[[bench]]
name = "mhc_overhead"
harness = false

# Working examples (experimental examples excluded)
[[example]]
name = "train_rust_maxgpu"
path = "examples/train_rust_maxgpu.rs"

[[example]]
name = "debug_generation"
path = "examples/debug_generation.rs"

[[example]]
name = "test_context_dependence"
path = "examples/test_context_dependence.rs"

[[example]]
name = "test_data_shift"
path = "examples/test_data_shift.rs"

[[example]]
name = "test_layer_outputs"
path = "examples/test_layer_outputs.rs"

[[example]]
name = "test_loss_alignment"
path = "examples/test_loss_alignment.rs"

[[example]]
name = "train_diagnostic"
path = "examples/train_diagnostic.rs"

[[example]]
name = "benchmark_memory"
path = "examples/benchmark_memory.rs"
