[package]
name = "nanochat-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
nanochat-model = { path = "../nanochat-model" }
nanochat-serve = { path = "../nanochat-serve" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rayon = { workspace = true }
regex = "1"
tempfile = "3"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
