[package]
name = "nanochat-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
nanochat-model = { path = "../nanochat-model" }
nanochat-serve = { path = "../nanochat-serve" }
nanochat-train = { path = "../nanochat-train" }
nanochat-rl = { path = "../nanochat-rl" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rayon = { workspace = true }
regex = "1"
tempfile = "3"
chrono = "0.4"
tokenizers = "0.20"
candle-core = { workspace = true }
candle-nn = { workspace = true }
rand = "0.8"
syn = { version = "2", features = ["full", "parsing"] }
flate2 = "1"

[dev-dependencies]
tempfile = "3"
