[package]
name = "nanochat-model"
version = "0.1.0"
edition = "2021"

[dependencies]
ternary-core = { path = "../ternary-core" }
ternary-kernels = { path = "../ternary-kernels" }
mhc-lite = { path = "../mhc-lite" }
half = { workspace = true }
bytemuck = { workspace = true }
num_cpus = { workspace = true }
serde_json = { workspace = true }
wave-fft = { path = "../wave-fft" }
num-complex = { workspace = true }
