[package]
name = "nanochat-train"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nanochat-train"
path = "src/main.rs"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
ternary-core = { path = "../ternary-core" }
nanochat-core = { path = "../nanochat-core" }
mhc-lite = { path = "../mhc-lite" }
wave-fft = { path = "../wave-fft", features = ["candle"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rand = "0.8"
indicatif = "0.17"
rayon = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }
tokenizers = "0.20"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"], optional = true }
nix = { version = "0.29", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossbeam-channel = "0.5"
thiserror = { workspace = true }
tensorboard-rs = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
cuda = ["candle-core/cuda"]
tensorboard = ["tensorboard-rs"]
