[package]
name = "wave-fft"
version = "0.1.0"
edition = "2021"

[dependencies]
rustfft = { workspace = true }
num-complex = { workspace = true }

[features]
default = []
candle = ["dep:candle-core"]

[dependencies.candle-core]
workspace = true
optional = true

[dev-dependencies]
candle-core = { workspace = true }
